@@ -14,8 +14,8 @@
 
     <properties>
         <!-- java -->
-        <java.version>13</java.version>
-        <java.enable.preview>--enable-preview</java.enable.preview>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <java.version>1.8</java.version>
 
         <!-- deps -->
         <spring.version>5.2.0.RELEASE</spring.version>
@@ -95,18 +95,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.0</version>
                 <configuration>
-                    <release>${java.version}</release>
-                    <compilerArgs>${java.enable.preview}</compilerArgs>
-                </configuration>
-            </plugin>
-
-            <!-- for tests -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.22.2</version>
-                <configuration>
-                    <argLine>${java.enable.preview}</argLine>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
                 </configuration>
             </plugin>
 
